--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,8 +9,8 @@ $breakpoint-phone:		30em;
 $breakpoint-tablet:		50em;
 $breakpoint-desktop:	70em;
 
-$color-green-85: #36D995;
-$color-green-72: #2DB77E;
+$color-green-85: #EE964B;
+$color-green-72: #F4D35E;
 
 $color-yellow-100:	#FFC336;
 
