--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -7,14 +7,14 @@
 		<a class="post-link" href="{{ .Permalink }}"></a>
 		{{ if .Params.image }}
 		<figure class="post-image">
-			<a href="{{ .Permalink }}"><img src="{{ .Params.image }}" alt="" /></a>
+			<a href="{{ .Permalink }}"><img src="{{ .Params.image }}" alt=""/></a>
 		</figure>
 		{{ end }}
 		<span class="post-meta">
-			<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span>
+			<span class="post-date">{{.Date.Day}} {{ index $.Site.Data.Months.months (int (i18n .Lang)) .Date.Month }} {{.Date.Year}}, {{ .Date.Format "15:04" }}</span>
 		</span>
 		<h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
 		<p class="post-excerpt">{{ .Description }}&hellip;</p>
-		<span class="post-more"><a href="{{ .Permalink }}">Read More <i class="icon-arrow-right"></i></a></span>
+		<span class="post-more"><a href="{{ .Permalink }}">{{ i18n "readMore" }} <i class="icon-arrow-right"></i></a></span>
 	</div>
 </article>
