--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,4 @@
-{{ $baseurl := .Site.BaseURL }}
+{{ $baseurl := default "/" (.Site.LanguagePrefix) }}
 {{ partial "header.html" . }}
 
 <main class="content" role="main">
@@ -9,7 +9,9 @@
 
   			<header class="post-header">
   				<span class="post-meta">
-						<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span> <span class="reading-time">| <span class="estimated-reading-time">{{ .ReadingTime }} min.</span> (<span class="word-count">{{ .WordCount }}</span> words)</span></span>
+						<span class="post-date">{{.Date.Day}} {{ index $.Site.Data.Months.months (int (i18n .Lang)) .Date.Month }} {{.Date.Year}}, {{ .Date.Format "15:04" }}</span>
+						<span class="reading-time">| <span class="estimated-reading-time">{{ i18n "minReading" .ReadingTime }}</span>
+						</span></span>
   				</span>
   				<div class="clear"></div>
   				<h1 class="post-title">{{ .Title }}</h1>
