--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -143,20 +143,26 @@
         <div id="ajax-container">
           <nav id="nav" class="nav">
             <div class="nav-logo">
-              <a href="{{ .Site.BaseURL }}">
+              <a href="{{ default "/" (.Site.LanguagePrefix) }}">
       			  {{ if .Site.Params.logo }}
-      			  	<img src="{{ .Site.Params.logo }}" alt="Logo"/>
+      			  	<img src="{{ .Site.Params.logo }}" alt="{{ i18n "author" }}" title="{{ i18n "author" }}"/>
       			  {{ else if .Site.Params.author.gravatarHash }}
-      				  <img src="https://www.gravatar.com/avatar/{{ .Site.Params.author.gravatarHash }}.png?s=32" alt="Logo"/>
+      				  <img src="https://www.gravatar.com/avatar/{{ .Site.Params.author.gravatarHash }}.png?s=32"/>
       			  {{ end }}
               </a>
             </div>
             <div class="nav-menu">
+              {{ if .IsTranslated }}
+              {{ range .Translations }}
+              <a href="{{ .Permalink }}">{{ .Lang }}</a>
+              {{ end }}
+              {{ end }}
               <a class="rss" href="{{.RSSLink}}">
                 <i class="icon-rss"></i>
               </a>
-                {{ if .IsPage }}
+                {{ if .IsPage }} {{ if false }}
                 <a class="menu" data-action="toc" data-target="toc"><i class="icon-location"></i></a>
+                {{ end }}
                 {{ end }}
                 {{ if .Site.Menus.main }}
                 <a class="menu" data-action="menu" data-target="menu"><i class="icon-menu"></i></a>
