--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,7 +1,7 @@
 {{ if .Site.Menus.main }}
 <div id="menu" data-target="menu">
     <div class="menu-header">
-        <span class="menu-label">Menu</span>
+        <span class="menu-label">{{ i18n "Menu" }}</span>
         <a class="menu-close" data-action="menu" data-target="menu"></a>
     </div>
 
