--- a/layouts/partials/mind_buttons.html
+++ b/layouts/partials/mind_buttons.html
@@ -1,5 +1,5 @@
 {{ if .Params.mind_music }}
-<a href={{ .Params.mind_music }} title="{{ i18n "MindMusicTitle" }}" class="rss">
+<a href={{ .Params.mind_music }} title="{{ i18n "MindMusicTitle" }}" class="rss" target="_blank">
     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="13px" y="13px" width="25px" height="25px" viewBox="0 0 30.051 30.051" style="enable-background:new 0 0 30.051 30.051;" xml:space="preserve" onmouseover="this.style.fill='#EE964B'" onmouseout="this.style.fill='black'">
         <path d="M19.982,14.438l-6.24-4.536c-0.229-0.166-0.533-0.191-0.784-0.062c-0.253,0.128-0.411,0.388-0.411,0.669v9.069
             c0,0.284,0.158,0.543,0.411,0.671c0.107,0.054,0.224,0.081,0.342,0.081c0.154,0,0.31-0.049,0.442-0.146l6.24-4.532
@@ -12,7 +12,7 @@
 {{ end }}
 
 {{ if .Params.mind_photo }}
-<a href={{ .Params.mind_photo }} title="{{ i18n "MindPhotoTitle" }}" class="rss">
+<a href={{ .Params.mind_photo }} title="{{ i18n "MindPhotoTitle" }}" class="rss" target="_blank">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 512 512" enable-background="new 0 0 31 31" xml:space="preserve" onmouseover="this.style.fill='#EE964B'" onmouseout="this.style.fill='black'">
 <path d="M336,272c0,44.188-35.813,80-80,80s-80-35.813-80-80s35.813-80,80-80S336,227.813,336,272z M512,144v256
 	c0,17.688-14.313,32-32,32H32c-17.688,0-32-14.313-32-32V144c0-17.688,14.313-32,32-32h32c0-17.688,14.328-32,32-32h32
