--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,29 @@
 
   			<header class="post-header">
   				<span class="post-meta">
-						<span class="post-date">{{.Date.Day}} {{ index $.Site.Data.Months.months (int (i18n .Lang)) .Date.Month }} {{.Date.Year}}, {{ .Date.Format "15:04" }}</span>
+						<span class="post-date">
+					    {{ if .Params.start_date }}
+							{{ $start_month := (index $.Site.Data.Months.months (int (i18n .Lang)) (int (dateFormat "01" .Params.start_date))) }}
+							{{ $start_year := (dateFormat "2006" .Params.start_date) }}
+							{{ $end_month := (index $.Site.Data.Months.months (int (i18n .Lang)) (int (dateFormat "01" .Params.end_date))) }}
+							{{ $end_year := (dateFormat "2006" .Params.end_date) }}
+							{{ dateFormat "02" .Params.start_date }}
+							{{ if ne $start_year $end_year }}
+								{{ $start_month }}
+								{{ $start_year }}
+							{{ else }}
+								{{ if ne $start_month $end_month }}
+									{{ $start_month }}
+								{{ end }}
+							{{ end }}
+							 -
+							{{ dateFormat "02" .Params.end_date}}
+							{{ $end_month }}
+							{{ $end_year }}
+						{{ else }}
+							{{.Date.Day}} {{ index $.Site.Data.Months.months (int (i18n .Lang)) .Date.Month }} {{.Date.Year}}, {{ .Date.Format "15:04" }}
+						</span>
+						{{ end }}
 						<span class="reading-time">| <span class="estimated-reading-time">{{ i18n "minReading" .ReadingTime }}</span>
 						</span></span>
   				</span>
@@ -31,17 +53,6 @@
                 <a href="{{ $baseurl }}/tags/{{ $tag | urlize }}/">{{ $tag }}</a>
             {{ end }}
             {{ end }}
-  				</div>
-  				<div class="post-share">
-  					<a class="icon-twitter" href="https://twitter.com/share?text={{ .Title }}&url={{ .Permalink }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-  						<span>Twitter</span>
-  					</a>
-  					<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-  						<span>Facebook</span>
-  					</a>
-  					<a class="icon-gplus" href="https://plus.google.com/share?url={{ .Permalink }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-  						<span>Google+</span>
-  					</a>
   				</div>
   			</footer>
 
