--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,9 @@
 				<div id="body-class" style="display: none;"></div>
 				<footer id="footer">
-					<section class="credits">
-						<span class="credits-theme">Theme <a href="https://github.com/zenithar/hugo-theme-bleak" target="_blank" rel="nofollow">Bleak</a> by <a href="http://zutrinken.com" target="_blank" rel="nofollow">zutrinken</a></span>
-						<span class="credits-software">Published with <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a></span>
+					<section class="credits" style="text-align: center;">
+						<span class="credits-theme" style="width: fit-content;">Theme <a href="https://github.com/zenithar/hugo-theme-bleak" target="_blank" rel="nofollow">Bleak</a> by <a href="http://zutrinken.com" target="_blank" rel="nofollow">zutrinken</a></span>
+						<span class="credits-software" style="width: fit-content;">Published with <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a></span>
+                        © 2017 {{ if ne now.Year 2017 }} &mdash; {{ now.Year }} {{ end }} {{ .Site.Params.author.firstname }} {{ .Site.Params.author.lastname }}, {{ i18n "copyright" }}
 					</section>
 				</footer>
 				{{ partial "navigation.html" . }}
