yandex metrika added

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -127,6 +127,7 @@
       <div id="loader-wrapper">
         <div id="loader"></div>
       </div>
+      {{ partial "yandex_metrika.html" . }}
       <section id="wrapper" style="display: none;">
         <div id="ajax-container">
           <nav id="nav" class="nav">
