--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 			</a>
 		</div>
 		{{ if .Site.Params.cover }}
-		<div class="header-cover blured-image" style="background-color: #19a0d7; background-image: url(/images/cover.low.jpg)" data-src="{{ .Site.BaseURL }}/{{ .Site.Params.cover }}"></div>
+		<div class="header-cover blured-image" style="background-image: url(/cover.jpg);" data-src="{{ .Site.BaseURL }}/{{ .Site.Params.cover }}"></div>
 		<!-- <div class="header-cover" style="background-color: #EE964B; background-image: url({{ .Site.Params.cover }})"></div> -->
 		{{ end }}
 	</header>
